# Aegis

./: .gitignore  ARCHITECTURE.md  README.md  conftest.py  pyproject.toml  requirements.txt
aegis/: __init__.py  __main__.py  config.py  daemon.py  models.py
aegis/api/: __init__.py  server.py
aegis/headless/: __init__.py  fallback.py
aegis/tier1_senses/: __init__.py  accessibility.py  telemetry.py  watchdog.py
aegis/tier1_senses/actuation/: __init__.py  base.py  desktop.py  dry_run.py
aegis/tier2_core/: __init__.py  cee.py  vla.py
aegis/tier2_core/dna/: __init__.py  store.py
aegis/tier3_governance/: __init__.py  pipnb.py  zones.py
examples/: phase2_cee_demo.py
tests/: test_cee.py  test_daemon_api.py  test_dna.py  test_headless.py  test_models.py  test_pipnb.py  test_tier1.py  test_zones.py
